force-app/main/default/objects/Opportunity_FoR__c.object
<CustomObject>
    <description>FoRs Linked to Opportunities</description>
    <fields>
        <fullName>Fields_of_Research__c</fullName>
        <description>Links to the associated Field Of Research</description>
        <inlineHelpText>Links to the associated Field Of Research</inlineHelpText>
        <label>Fields of Research</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Fields_of_Research__c.Hierarchical_level__c</field>
                <operation>notEqual</operation>
                <value>Division</value>
            </filterItems>
            <filterItems>
                <field>Fields_of_Research__c.Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Fields_of_Research__c</referenceTo>
        <relationshipLabel>Opportunity FoR</relationshipLabel>
        <relationshipName>Opportunity_FoRs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Links to the associated Opportunity</description>
        <inlineHelpText>Links to the associated Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Fields of Research</relationshipLabel>
        <relationshipName>Opportunity_FoRs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Percentage allocated to this FoR</description>
        <inlineHelpText>Percentage allocated to this FoR</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <description>Unique Id for FoR/Opportunity combination</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Id for FoR/Opportunity combination</inlineHelpText>
        <label>UID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Opportunity FoR</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Opportunity FoR</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity FoRs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Percentage_Validation</fullName>
        <active>true</active>
        <description>The percentage should not be greater than 0</description>
        <errorConditionFormula>Percentage__c  &lt;= 0.00</errorConditionFormula>
        <errorMessage>FoR allocated percentage must be between 1-100%. Total sum can&apos;t exceed 100%</errorMessage>
    </validationRules>
</CustomObject>